# charls-wasm

./: .editorconfig  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  BUILDING.md  CHANGELOG.md  CMakeLists.txt  DESIGN.md  LICENSE.md  PERFORMANCE.md  README.md  REUSE.toml  SECURITY.md  build-test-debug.sh  build-test-release.sh  copy-to-dist.sh  eslint.config.mjs  package-lock.json  package.json  prepare-browser.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: ci.yml  deploy.yml  publish.yml  reuse.yml
LICENSES/: BSD-3-Clause.txt
npm/: README.md  package.json.in
src/: CMakeLists.txt  FrameInfo.hpp  JpegLSDecoder-example.js  JpegLSDecoder.hpp  JpegLSDecoder.js  JpegLSEncoder.hpp  JpegLSEncoder.js  index.js  jpegls-decoder.js  jpegls-encoder.js  jpegls-error.js  jslib.cpp  stub.cpp
test/browser/: index.html
test/cpp/: main.cpp
test/node/: index.js  package-lock.json  package.json
test/unit/: decoder.test.js  encoder.test.js  jpegls-decoder.test.js  jpegls-encoder.test.js
